# FaceAgePredictor

./: .gitignore  README.md  TODO.py  predict_age_from_image.py  predict_age_from_video.py  pyproject.toml
.github/workflows/: linter.yml  pytest.yml  python-ci.yml
app/: main.py
config/: config.yml
faceagepredictor/app/: image_prediction.py  main.py  video_prediction.py
faceagepredictor/data/: data_prep.py  face_detection.py
faceagepredictor/models/: base_model.py  resnet_model.py
faceagepredictor/prediction/: predict.py
faceagepredictor/training/: train.py
faceagepredictor/utils/: load_config.py
pipeline/: config.py  config.yaml  processing.py  run_train_pipeline.py  utils.py
pipeline/estimator/: data_prep.py  models.py  run_train_pipeline.py  train_eval.py
pipeline/video_image/: face_detection.py  video_to_image.py
scripts/: predict.py  train.py
src/app/: image_prediction.py  main.py  video_prediction.py  webcam_prediction.py
src/data/: data_prep.py
src/models/: base_model.py  mobilenet_model.py  resnet_model.py
src/prediction/: predict.py
src/training/: train.py
src/utils/: load_config.py  metrics.py
