[tool.poetry]
name = "faceagepredict"
version = "0.1.0"
description = ""
authors = ["denimbluu <denim.bluu@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
mtcnn = "^0.1.1"
tensorflow = "^2.16.2"
loguru = "^0.7.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
facenet-pytorch = "2.5.2"
tensorboard = "^2.17.0"


[tool.poetry.group.dev.dependencies]
ptpython = "^3.0.27"
mypy = "^1.10.0"
ruff = "^0.4.8"
ipython = "^8.25.0"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
